Fix menu chevrons on mobile

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -297,7 +297,7 @@ a.action {
     padding: 15px 0px;
   }
 
-  aside svg {
+  aside > svg {
     display: block;
     position: relative;
     top: 0;
